# django-digid-eherkenning

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.rst  Jenkinsfile  MANIFEST.in  README  README.rst  codecov.yml  information.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
digid_eherkenning/: _xml.py  admin.py  apps.py  backends.py  choices.py  client.py  compat.py  digid_urls.py  eherkenning_urls.py  exceptions.py  forms.py  managers.py  metadata_urls.py  mock_urls.py  settings.py  types.py  urls.py  utils.py  validators.py  views.py
digid_eherkenning/locale/nl/LC_MESSAGES/: django.mo  django.po
digid_eherkenning/management/: utils.py
digid_eherkenning/management/commands/: _base.py  create_digid_metadata.py  create_eherkenning_dienstencatalogus.py  create_eherkenning_metadata.py  create_saml_metadata.py  generate_digid_metadata.py  generate_eherkenning_dienstcatalogus.py  generate_eherkenning_metadata.py  make_metadata.py  runidpserver.py  show_services.py  update_stored_metadata.py
digid_eherkenning/migrations/: 0001_initial.py  0001_initial_to_v019.py  0002_auto_20220907_0717.py  0002_auto_20221102_1046.py  0002_mockdigiduser.py  0003_alter_mockdigiduser_options.py  0003_auto_20221020_1029.py  0003_digidconfiguration_artifact_resolve_content_type.py  0004_alter_eherkenningconfiguration_loa.py  0004_alter_mockdigiduser_bsn.py  0004_eherkenningmetadataconfiguration_artifact_resolve_content_type.py  0005_alter_eherkenningconfiguration_eh_service_instance_uuid_and_more.py  0005_auto_20221020_2135.py  0005_configcertificate_activation_date.py  0006_auto_20221021_0911.py  0006_digidconfiguration_metadata_file_source_and_more.py  0007_auto_20221021_1405.py  0007_eherkenningconfiguration_service_description_url.py  0008_alter_eherkenningconfiguration_eh_requested_attributes_and_more.py  0008_update_loa_fields.py  0009_decrypt_private_keys.py  0010_remove_digidconfiguration_key_passphrase_and_more.py  0011_configcertificate_configcertificate_uniq_config_cert.py  0012_move_config_certificate.py  0013_alter_eherkenningconfiguration_eh_requested_attributes_and_more.py  0014_alter_eherkenningconfiguration_digest_algorithm_and_more.py  0015_digidconfiguration_administrative_contact_person_email_and_more.py  0016_eherkenningconfiguration_eidas_service_description.py
digid_eherkenning/mock/: backends.py  conf.py  digid_urls.py
digid_eherkenning/mock/idp/: digid_urls.py  forms.py
digid_eherkenning/mock/idp/views/: digid.py
digid_eherkenning/mock/views/: digid.py
digid_eherkenning/models/: __init__.py  base.py  certificates.py  digid.py  digid_metadata_config.py  eherkenning.py  eherkenning_metadata_config.py  metadata_config.py
digid_eherkenning/oidc/: __init__.py  admin.py  apps.py  backends.py  claims.py  forms.py  migrations_operations.py  models.py  plugins.py  schemas.py  utils.py  views.py
digid_eherkenning/oidc/migrations/: 0001_initial_squashed_0007_auto_20221213_1347.py  0002_auto_20240207_1546.py  0003_rename_openidconnectpublicconfig_digidconfig_and_more.py  0004_migrate_config_to_claimfield.py  0005_digidmachtigenconfig_mandate_service_id_claim_and_more.py  0006_alter_digidconfig_oidc_rp_scopes_list_and_more.py  0007_digidconfig_default_loa_digidconfig_loa_claim_and_more.py  0008_digidconfig_loa_value_mapping_and_more.py  0009_remove_digidconfig_oidc_exempt_urls_and_more.py  0010_delete_digidconfig_delete_digidmachtigenconfig_and_more.py  0010_migrate_data_new_config.py
digid_eherkenning/oidc/models/: __init__.py  base.py  digid.py  eherkenning.py
digid_eherkenning/oidc/tests/: test_callback_endpoints.py
digid_eherkenning/saml2/: base.py  digid.py  eherkenning.py  metadata.py  settings.py  soap_logout_request.py
digid_eherkenning/static/digid-mock/: extra.css  extra.js
digid_eherkenning/static/digid-mock/assets/: application.css  icons.eot
digid_eherkenning/static/digid_eherkenning/: login_submit.css  login_submit.js
digid_eherkenning/templates/admin/digid_eherkenning/digidconfiguration/: change_form.html
digid_eherkenning/templates/admin/digid_eherkenning/digidmetadataconfiguration/: change_form_object_tools.html
digid_eherkenning/templates/admin/solo/: change_form.html
digid_eherkenning/templates/digid_eherkenning/: post_binding.html
digid_eherkenning/templates/digid_eherkenning/mock/: base.html  bsn.html  login.html  password.html
digid_eherkenning/views/: __init__.py  base.py  digid.py  eherkenning.py  metadata.py
digid_eherkenning/xsd/: eherkenning-dc.xml  saml-schema-assertion-2.0.xsd  saml-schema-metadata-2.0.xsd  xenc-schema.xsd
docs/: brokers.rst  cli.rst  conf.py  configuration.rst  developers.rst  index.rst  metadata.rst  mocks.rst  oidc.rst  quickstart.rst
requirements/: base.txt  dev.txt  jenkins.txt
tests/: conftest.py  mixins.py  test_admin.py  test_certificate_admin.py  test_certificate_models.py  test_commands.py  test_dienst_catalogus_creation.py  test_digid_auth_views.py  test_digid_logout_views.py  test_digid_metadata.py  test_eherkenning_metadata.py  test_eherkenning_views.py  test_metadata_creation.py  test_metadata_views.py  test_migrations.py  test_mock_forms.py  test_mock_views.py  test_models.py  test_saml2_client.py  test_saml_utils.py  test_views.py  utils.py
tests/files/digid/: metadata  metadata_with_slo_POST_2
tests/files/snakeoil-cert/: ssl-cert-snakeoil.key  ssl-cert-snakeoil.pem
tests/oidc/: conftest.py  test_claim_obfuscation.py  test_claim_processing.py  test_data_migrations.py  test_migration_operations.py  test_oidc.py  test_oidc_integration.py  test_views.py
tests/oidc_project/migrations/: 0001_initial.py  0002_move_oidc_data.py
tests/project/: asgi.py  choices.py  jenkins_settings.py  managers.py  mock_settings.py  mock_urls.py  models.py  oidc_backends.py  settings.py  urls.py  views.py  wsgi.py
tests/project/migrations/: 0001_initial.py  0002_auto_20221027_1305.py
tests/project/templates/project/: base.html  index.html  success.html
(+3 files in other folders)
