[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-digid-eherkenning"
version = "0.12.0"
description = "A Django app for DigiD/eHerkenning authentication flows"
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["django", "authentication", "digid", "eherkenning", "eidas", "dutch", "nl", "netherlands"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=40.0.0",
    "django>=3.2.0",
    "django-sessionprofile",
    "django-simple-certmanager",
    "django-solo",
    "lxml>=4.7.1",
    "furl",
    "maykin-python3-saml>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/django-digid-eherkenning"
Documentation = "https://django-digid-eherkenning.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/maykinmedia/django-digid-eherkenning/issues"
"Source Code" = "https://github.com/maykinmedia/django-digid-eherkenning"
Changelog = "https://github.com/maykinmedia/django-digid-eherkenning/blob/master/docs/CHANGELOG.rst"

[project.optional-dependencies]
tests = [
    "django-test-migrations",
    "pytest",
    "pytest-django",
    "responses",
    "freezegun",
    "tox",
    "isort",
    "black",
    "flake8",
]
coverage = [
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "bump-my-version",
    "twine",
]

[tool.setuptools.packages.find]
include = ["digid_eherkenning*"]
namespaces = false

[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
known_first_party="digid_eherkenning"
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.project.settings"

[tool.bumpversion]
current_version = "0.12.0"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/conf.py"},
]

[tool.coverage.run]
branch = true
source = [
    "digid_eherkenning"
]
omit = [
    "digid_eherkenning/migrations/*",
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
omit = [
    "digid_eherkenning/migrations/*",
]

[tool.coverage.html]
directory = "cover"
