# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = digid-eherkenning
version = 0.2.0
description = TODO
long_description = file: README.rst
url = https://github.com/maykinmedia/digid_eherkenning
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = TODO
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-choices>=1.6.0
    defusedxml>=0.5.0
tests_require =
    freezegun
    pytest
    pytest-django
    tox
    isort

[options.packages.find]
include = 
    digid_eherkenning
    digid_eherkenning.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,node_modules
skip_glob = **/migrations/**
not_skip = __init__.py
known_django=django
known_first_party={{ project_name|lower }}
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
python_classes = test_*
DJANGO_SETTINGS_MODULE=tests.project.settings

[pep8]
max-line-length=88
ignore=W293,W291,E501,E261
exclude=migrations,static,media

[flake8]
max-line-length=88
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes
