# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-digid-eherkenning
version = 0.10.0
description = A Django app for DigiD/eHerkenning authentication flows
long_description = file: README.rst
url = https://github.com/maykinmedia/django-digid-eherkenning
project_urls =
    Changelog = https://github.com/maykinmedia/django-digid-eherkenning/blob/master/docs/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/django-digid-eherkenning/issues
    Source Code = https://github.com/maykinmedia/django-digid-eherkenning
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = django, authentication, digid, eherkenning, eidas, dutch, nl, netherlands
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2.0
    django-sessionprofile
    django-simple-certmanager
    django-solo
    lxml
    defusedxml>=0.7.0
    furl
    maykin-python3-saml
tests_require =
    django-test-migrations
    freezegun
    pytest
    pytest-django
    responses
    freezegun
    tox
    isort
    black

[options.packages.find]
include =
    digid_eherkenning
    digid_eherkenning.*

[options.extras_require]
tests =
    django-test-migrations
    pytest
    pytest-django
    responses
    freezegun
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,node_modules,.tox
skip_glob = **/migrations/**
known_django=django
known_first_party=digid_eherkenning
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
python_classes = test_*
DJANGO_SETTINGS_MODULE=tests.project.settings

[pep8]
max-line-length=88
ignore=W293,W291,E501,E261
exclude=migrations,static,media

[flake8]
max-line-length=88
exclude=env,.tox,doc
